--- a/django_celery_beat/templates/admin/djcelery/change_list.html
+++ b/django_celery_beat/templates/admin/djcelery/change_list.html
@@ -10,10 +10,10 @@
   {% if wrong_scheduler %}
     <ul class="messagelist">
       <li class="warning">
-      Periodic tasks won't be dispatched unless you set the
-      <code>CELERYBEAT_SCHEDULER</code> setting to
-      <code>djcelery.schedulers.DatabaseScheduler</code>,
-      or specify it using the <code>-S</code> option to celerybeat
+      {% trans "Periodic tasks won't be dispatched unless you set the" %}
+      {% trans "<code>CELERYBEAT_SCHEDULER</code> setting to" %}
+      {% trans "<code>djcelery.schedulers.DatabaseScheduler</code>," %}
+      {% trans "or specify it using the <code>-S</code> option to celerybeat" %}
       </li>
     </ul>
   {% endif %}
